<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".BasicActivity">

    <CheckBox
        android:id="@+id/cb_head1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_span"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/et_span_count1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/span_count"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/cb_head1"
        app:layout_constraintLeft_toRightOf="@+id/cb_head1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <CheckBox
        android:id="@+id/cb_head2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_span"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cb_head1"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/et_span_count2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/span_count"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/cb_head2"
        app:layout_constraintLeft_toRightOf="@+id/cb_head2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/head1"
        app:layout_constraintBaseline_toBaselineOf="@+id/cb_head1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/head2"
        app:layout_constraintBaseline_toBaselineOf="@+id/cb_head2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/sr_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_span_count2">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list_basic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.constraint.ConstraintLayout>
